# 5e-api-wrapper

./: .gitignore  pyproject.toml  readme.md
src/: test.py
src/5e-api/: main.py
src/bits_api/: __init__.py  api_call.py  api_queue.py
tests/: test.py
